--- a/app/assets/stylesheets/partials/modules/_section-nav.scss
+++ b/app/assets/stylesheets/partials/modules/_section-nav.scss
@@ -121,7 +121,7 @@
 
 		/* Select list label */
 		.flag__img {
-			color: $color-light-txt;
+			color: $color-grey-4;
 			@include font-size($font-size-sml, 1.5);
 
 			/* Bring label text into view at this breakpoint */
